期中作業整理

--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,6 @@
 <h1>About</h1>
+<p>歡迎來到洪丞佑的網站!</p>
+<p></p>
 <p>網頁: <a class="Link--inTextBlock" href="https://changyou41123220.github.io/cd2024/">https://changyou41123220.github.io/cd2024</a></p>
 <p>網誌: <a href="https://changyou41123220.github.io/cd2024/blog">https://changyou41123220.github.io/cd2024/blog</a></p>
 <p>簡報: <a href="https://changyou41123220.github.io/cd2024/reveal">https://changyou41123220.github.io/cd2024/reveal</a></p>
@@ -322,7 +324,16 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<!-- editor2 結束 --><hr/>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p>
+<!-- editor2 結束 -->
+<h1>Latex期中翻譯作業</h1>
+<p><span>我是負責odoo第六章的翻譯以及latex的撰寫</span></p>
+<p>以下是作業檔案:</p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893969/CHAPTER6.txt">第六章latex程式</a></p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893973/CHAPTER6.pdf">第六章.pdf</a></p>
+<h1>w5影片上字幕</h1>
+<p><span>本周和上周的作業是一模一樣的，目前我們這組已完成所有影片的字幕，我所分到的是影片1及2的字幕，以下是成果。</span></p>
+<p> <a href="https://github.com/Changyou41123220/cd2024/files/14784743/1.txt">影片1 字幕稿</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=aoExHCmqWtwnTxy4" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14784861/2.txt">影片2 字幕稿</a></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=f5_WA07o9MrgRT_a" title="YouTube video player" width="560"></iframe></p>
