--- a/content/w5影片上字幕.html
+++ b/content/w5影片上字幕.html
@@ -142,18 +142,13 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>About</h1>
-<p>歡迎來到洪丞佑的網站!</p>
+    <div id="tipue_search_content">Latex期中翻譯作業 << <a href='Latex期中翻譯作業.html'>Previous</a> <br /><h1>w5影片上字幕</h1>
+<p><span>本周和上周的作業是一模一樣的，目前我們這組已完成所有影片的字幕，我所分到的是影片1及2的字幕，以下是成果。</span></p>
+<p> <a href="https://github.com/Changyou41123220/cd2024/files/14784743/1.txt">影片1 字幕稿</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=aoExHCmqWtwnTxy4" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14784861/2.txt">影片2 字幕稿</a></p>
 <p></p>
-<p>網頁: <a class="Link--inTextBlock" href="https://changyou41123220.github.io/cd2024/">https://changyou41123220.github.io/cd2024</a></p>
-<p>網誌: <a href="https://changyou41123220.github.io/cd2024/blog">https://changyou41123220.github.io/cd2024/blog</a></p>
-<p>簡報: <a href="https://changyou41123220.github.io/cd2024/reveal">https://changyou41123220.github.io/cd2024/reveal</a></p>
-<p>倉儲: <a href="https://github.com/Changyou41123220/cd2024">https://github.com/Changyou41123220/cd2024</a></p>
-<p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
-<p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
-<p style="padding-left: 30px;">倉儲對應網站: <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
-<br /> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=f5_WA07o9MrgRT_a" title="YouTube video player" width="560"></iframe></p><br />Latex期中翻譯作業 << <a href='Latex期中翻譯作業.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
