--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,8 +1,8 @@
 <h1>About</h1>
-<p>網頁: 請填入目前網站所在的 URL, <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a> </p>
-<p>網誌: 請填入目前網站所在的 URL/blog, <a href="https://mde.tw/cmsimde_site/blog">https://mde.tw/cmsimde_site/blog</a> </p>
-<p>簡報: 請填入目前網站所在的 URL/reveal, <a href="https://mde.tw/cmsimde_site/reveal">https://mde.tw/cmsimde_site/reveal</a> </p>
-<p>倉儲: 請填入目前網站所對應的 Github 倉儲連結</p>
+<p>網頁: <a class="Link--inTextBlock" href="https://changyou41123220.github.io/cd2024/">https://changyou41123220.github.io/cd2024</a></p>
+<p>網誌: <a href="https://changyou41123220.github.io/cd2024/blog">https://changyou41123220.github.io/cd2024/blog</a></p>
+<p>簡報: <a href="https://changyou41123220.github.io/cd2024/reveal">https://changyou41123220.github.io/cd2024/reveal</a></p>
+<p>倉儲: <a href="https://github.com/Changyou41123220/cd2024">https://github.com/Changyou41123220/cd2024</a></p>
 <p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
 <p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
 <p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
@@ -23,7 +23,8 @@
 <p><span style="background-color: #ccffcc;">SStatic</span> - Start Static Site - 利用 Python 啟動網站伺服功能, 可以讓使用者檢查轉檔後的靜態網站內容.</p>
 <p><span style="background-color: #ccffcc;">RStatic</span> - Replit Static Site URL - 僅用於 Replit 模式, 當使用者按下 SStatic 後, 可以按下 RStatic 進入當下尚未推向 Github Pages 的靜態網站.</p>
 <p><span style="background-color: #ccffcc;">80</span> - 由 init.py 中 static_port 所決定的連結字串, 一般不使用 80, 只有在 Replit 中為了與動態網站共用 port, 才特別設為 80.</p>
-<p></p><h1>Replit</h1>
+<p></p>
+<h1>Replit</h1>
 <p><a href="https://replit.com">https://replit.com</a></p>
 <p>利用 init_replit 指令安裝所需 Python 模組<br/><br/>chmod u+x init_replit<br/><br/>./init_replit</p>
 <p dir="auto">On Replit:</p>
@@ -36,7 +37,8 @@
 <p dir="auto"></p>
 <p dir="auto">for IPv6 only Ubuntu:<br/><br/>.ssh 目錄中的 config, 將 SSH session 名稱設為 github.com:<br/><br/>Host github.com<br/>User git<br/>Hostname github.com<br/>ProxyCommand /usr/bin/ncat --proxy p4.cycu.org:3128 --proxy-type http %h %p<br/><br/>for Replit:<br/><br/>.ssh 目錄中的 config, 將 SSH session 名稱設為 github.com:<br/><br/>Host github.com<br/>User git<br/>Hostname github.co<br/>#since Replit works for IPv4, therefore no ProxyCommand setting needed<br/>#ProxyCommand /usr/bin/ncat --proxy p4.cycu.org:3128 --proxy-type http %h %p</p>
 <p></p>
-<p></p><h1>Brython</h1>
+<p></p>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
@@ -320,7 +322,15 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div1 作為切入位置 --></p>
 <div id="brython_div2"></div>
-<!-- editor2 結束 --><hr/>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p>
+<!-- editor2 結束 -->
+<h1>Latex期中翻譯作業</h1>
+<p><span>我是負責odoo第六章的翻譯以及latex的撰寫</span></p>
+<p>以下是作業檔案:</p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893969/CHAPTER6.txt">第六章latex程式</a></p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893973/CHAPTER6.pdf">第六章.pdf</a></p><h1>w5影片上字幕</h1>
+<p><span>本周和上周的作業是一模一樣的，目前我們這組已完成所有影片的字幕，我所分到的是影片1及2的字幕，以下是成果。</span></p>
+<p> <a href="https://github.com/Changyou41123220/cd2024/files/14784743/1.txt">影片1 字幕稿</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=aoExHCmqWtwnTxy4" title="YouTube video player" width="560"></iframe></p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14784861/2.txt">影片2 字幕稿</a></p>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=f5_WA07o9MrgRT_a" title="YouTube video player" width="560"></iframe></p>
