--- a/content/Latex期中翻譯作業.html
+++ b/content/Latex期中翻譯作業.html
@@ -142,18 +142,12 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content"> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>About</h1>
-<p>歡迎來到洪丞佑的網站!</p>
-<p></p>
-<p>網頁: <a class="Link--inTextBlock" href="https://changyou41123220.github.io/cd2024/">https://changyou41123220.github.io/cd2024</a></p>
-<p>網誌: <a href="https://changyou41123220.github.io/cd2024/blog">https://changyou41123220.github.io/cd2024/blog</a></p>
-<p>簡報: <a href="https://changyou41123220.github.io/cd2024/reveal">https://changyou41123220.github.io/cd2024/reveal</a></p>
-<p>倉儲: <a href="https://github.com/Changyou41123220/cd2024">https://github.com/Changyou41123220/cd2024</a></p>
-<p>本 cmsimde 網際內容管理系統的對應 Template 倉儲:</p>
-<p style="padding-left: 30px;"><a href="https://github.com/mdecycu/cmsimde_site">https://github.com/mdecycu/cmsimde_site</a></p>
-<p style="padding-left: 30px;">此 Template 將 cmsimde 作為子目錄而非子模組, 使用者可以依照需求自行修改</p>
-<p style="padding-left: 30px;">倉儲對應網站: <a href="https://mde.tw/cmsimde_site">https://mde.tw/cmsimde_site</a></p>
-<br /> <a href='cmsimde.html'>Next</a> >> cmsimde</div>
+    <div id="tipue_search_content">Brython << <a href='Brython.html'>Previous</a> <a href='w5影片上字幕.html'>Next</a> >> w5影片上字幕<br /><h1>Latex期中翻譯作業</h1>
+<p><span>我是負責odoo第六章的翻譯以及latex的撰寫</span></p>
+<p>以下是作業檔案:</p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893969/CHAPTER6.txt">第六章latex程式</a></p>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893973/CHAPTER6.pdf">第六章.pdf</a></p>
+<br />Brython << <a href='Brython.html'>Previous</a> <a href='w5影片上字幕.html'>Next</a> >> w5影片上字幕</div>
 
     <!-- footer -->
       <div class="container">
