自我介紹影片

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,6 @@
 <h1>About</h1>
+<p>歡迎來到洪丞佑的網站!</p>
+<p></p>
 <p>網頁: <a class="Link--inTextBlock" href="https://changyou41123220.github.io/cd2024/">https://changyou41123220.github.io/cd2024</a></p>
 <p>網誌: <a href="https://changyou41123220.github.io/cd2024/blog">https://changyou41123220.github.io/cd2024/blog</a></p>
 <p>簡報: <a href="https://changyou41123220.github.io/cd2024/reveal">https://changyou41123220.github.io/cd2024/reveal</a></p>
@@ -327,7 +329,8 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><span>我是負責odoo第六章的翻譯以及latex的撰寫</span></p>
 <p>以下是作業檔案:</p>
 <p><a href="https://github.com/Changyou41123220/cd2024/files/14893969/CHAPTER6.txt">第六章latex程式</a></p>
-<p><a href="https://github.com/Changyou41123220/cd2024/files/14893973/CHAPTER6.pdf">第六章.pdf</a></p><h1>w5影片上字幕</h1>
+<p><a href="https://github.com/Changyou41123220/cd2024/files/14893973/CHAPTER6.pdf">第六章.pdf</a></p>
+<h1>w5影片上字幕</h1>
 <p><span>本周和上周的作業是一模一樣的，目前我們這組已完成所有影片的字幕，我所分到的是影片1及2的字幕，以下是成果。</span></p>
 <p> <a href="https://github.com/Changyou41123220/cd2024/files/14784743/1.txt">影片1 字幕稿</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=aoExHCmqWtwnTxy4" title="YouTube video player" width="560"></iframe></p>
