--- a/content/About.html
+++ b/content/About.html
@@ -144,6 +144,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='cmsimde.html'>Next</a> >> cmsimde<br /><h1>About</h1>
 <p>歡迎來到洪丞佑的網站!</p>
+<p>期中自我介紹影片</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/BKzUpM1f1DQ?si=m6Wld4w5egFyDhJD" title="YouTube video player" width="560"></iframe></p>
 <p></p>
 <p>網頁: <a class="Link--inTextBlock" href="https://changyou41123220.github.io/cd2024/">https://changyou41123220.github.io/cd2024</a></p>
 <p>網誌: <a href="https://changyou41123220.github.io/cd2024/blog">https://changyou41123220.github.io/cd2024/blog</a></p>
