--- a/config/content.htm
+++ b/config/content.htm
@@ -339,3 +339,7 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><a href="https://github.com/Changyou41123220/cd2024/files/14784861/2.txt">影片2 字幕稿</a></p>
 <p></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=f5_WA07o9MrgRT_a" title="YouTube video player" width="560"></iframe></p>
+<h1>w12鋼球平台</h1>
+<p>這次專案我所負責到的是零件1的繪製</p>
+<p>繪製過程程式:<span style="background-color: #ffffff; color: #ff0000;"><strong><a href="https://gist.githubusercontent.com/Changyou41123220/283727dbc1d6f825d451e9cedfdd27c4/raw/155fca406cb92101aae9735f376e9717e8ea3f8b/%25E9%259B%25B6%25E4%25BB%25B61%25E9%2581%258E%25E7%25A8%258B.py" style="background-color: #ffffff; color: #ff0000;">零件1</a></strong></span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/HS-Tl_-t5jY?si=Zz-kgAHfRjfLpQqw" title="YouTube video player" width="560"></iframe></p>
