--- a/content/cmsimde.html
+++ b/content/cmsimde.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a></li>
                       </ul>
                 </nav>
               </div>
