--- a/content/w5影片上字幕.html
+++ b/content/w5影片上字幕.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,13 +142,14 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">Latex期中翻譯作業 << <a href='Latex期中翻譯作業.html'>Previous</a> <br /><h1>w5影片上字幕</h1>
+    <div id="tipue_search_content">Latex期中翻譯作業 << <a href='Latex期中翻譯作業.html'>Previous</a> <a href='w12鋼球平台.html'>Next</a> >> w12鋼球平台<br /><h1>w5影片上字幕</h1>
 <p><span>本周和上周的作業是一模一樣的，目前我們這組已完成所有影片的字幕，我所分到的是影片1及2的字幕，以下是成果。</span></p>
 <p> <a href="https://github.com/Changyou41123220/cd2024/files/14784743/1.txt">影片1 字幕稿</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/Wd_KVFVZHmw?si=aoExHCmqWtwnTxy4" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://github.com/Changyou41123220/cd2024/files/14784861/2.txt">影片2 字幕稿</a></p>
 <p></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=f5_WA07o9MrgRT_a" title="YouTube video player" width="560"></iframe></p><br />Latex期中翻譯作業 << <a href='Latex期中翻譯作業.html'>Previous</a> </div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/tSjwhVKyrb0?si=f5_WA07o9MrgRT_a" title="YouTube video player" width="560"></iframe></p>
+<br />Latex期中翻譯作業 << <a href='Latex期中翻譯作業.html'>Previous</a> <a href='w12鋼球平台.html'>Next</a> >> w12鋼球平台</div>
 
     <!-- footer -->
       <div class="container">
