--- a/content/w12鋼球平台.html
+++ b/content/w12鋼球平台.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a><li><a href='w17.html'>w17</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,10 +142,11 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w5影片上字幕 << <a href='w5影片上字幕.html'>Previous</a> <br /><h1>w12鋼球平台</h1>
+    <div id="tipue_search_content">w5影片上字幕 << <a href='w5影片上字幕.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w12鋼球平台</h1>
 <p>這次專案我所負責到的是零件1的繪製</p>
 <p>繪製過程程式:<span style="background-color: #ffffff; color: #ff0000;"><strong><a href="https://gist.githubusercontent.com/Changyou41123220/283727dbc1d6f825d451e9cedfdd27c4/raw/155fca406cb92101aae9735f376e9717e8ea3f8b/%25E9%259B%25B6%25E4%25BB%25B61%25E9%2581%258E%25E7%25A8%258B.py" style="background-color: #ffffff; color: #ff0000;">零件1</a></strong></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/HS-Tl_-t5jY?si=Zz-kgAHfRjfLpQqw" title="YouTube video player" width="560"></iframe></p><br />w5影片上字幕 << <a href='w5影片上字幕.html'>Previous</a> </div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/HS-Tl_-t5jY?si=Zz-kgAHfRjfLpQqw" title="YouTube video player" width="560"></iframe></p>
+<br />w5影片上字幕 << <a href='w5影片上字幕.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
 
     <!-- footer -->
       <div class="container">
