--- a/content/w17.html
+++ b/content/w17.html
@@ -146,7 +146,9 @@ img.add_border {
 <p>項目一</p>
 <p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/ErbLC6saOK1OgnnG-Bv_pQgBTjt40kj420DgtEcnRsTKtg?e=LJVmQb">零件連結</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i2bkSBZzdOI?si=OVaR2qcDZIHZIqz8" title="YouTube video player" width="560"></iframe></p>
-<p></p><br />w12鋼球平台 << <a href='w12鋼球平台.html'>Previous</a> </div>
+<p>項目二</p>
+<p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/Em35IBjO6TtEq5eoMMMEkBUBRJbWpbbR3L6mfcOtwzemTw?e=jnFO3j">組合圖連結</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/VxFTWnirn4Y?si=dervvnlYeAp-hJme" title="YouTube video player" width="560"></iframe></p><br />w12鋼球平台 << <a href='w12鋼球平台.html'>Previous</a> </div>
 
     <!-- footer -->
       <div class="container">
