新增項目三

--- a/content/項目一.html
+++ b/content/項目一.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsimde_site</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,11 +142,10 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w5影片上字幕 << <a href='w5影片上字幕.html'>Previous</a> <a href='w17.html'>Next</a> >> w17<br /><h1>w12鋼球平台</h1>
-<p>這次專案我所負責到的是零件1的繪製</p>
-<p>繪製過程程式:<span style="background-color: #ffffff; color: #ff0000;"><strong><a href="https://gist.githubusercontent.com/Changyou41123220/283727dbc1d6f825d451e9cedfdd27c4/raw/155fca406cb92101aae9735f376e9717e8ea3f8b/%25E9%259B%25B6%25E4%25BB%25B61%25E9%2581%258E%25E7%25A8%258B.py" style="background-color: #ffffff; color: #ff0000;">零件1</a></strong></span></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/HS-Tl_-t5jY?si=Zz-kgAHfRjfLpQqw" title="YouTube video player" width="560"></iframe></p>
-<br />w5影片上字幕 << <a href='w5影片上字幕.html'>Previous</a> <a href='w17.html'>Next</a> >> w17</div>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='項目二.html'>Next</a> >> 項目二<br /><h1>項目一</h1>
+<p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/ErbLC6saOK1OgnnG-Bv_pQgBTjt40kj420DgtEcnRsTKtg?e=LJVmQb">零件連結</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i2bkSBZzdOI?si=OVaR2qcDZIHZIqz8" title="YouTube video player" width="560"></iframe></p>
+<br />w17 << <a href='w17.html'>Previous</a> <a href='項目二.html'>Next</a> >> 項目二</div>
 
     <!-- footer -->
       <div class="container">
