--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a><li><a href='w17.html'>w17</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a><li class='has-children'><a href='w17.html'>w17</a><ul class='dropdown'><li><a href='項目一.html'>項目一</a><li><a href='項目二.html'>項目二</a><li><a href='項目三.html'>項目三</a></li>
                       </ul>
                 </nav>
               </div>
