--- a/content/w17.html
+++ b/content/w17.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a><li><a href='w17.html'>w17</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cmsimde.html'>cmsimde</a><li><a href='Replit.html'>Replit</a><li><a href='Brython.html'>Brython</a><li><a href='Latex期中翻譯作業.html'>Latex期中翻譯作業</a><li><a href='w5影片上字幕.html'>w5影片上字幕</a><li><a href='w12鋼球平台.html'>w12鋼球平台</a><li class='has-children'><a href='w17.html'>w17</a><ul class='dropdown'><li><a href='項目一.html'>項目一</a><li><a href='項目二.html'>項目二</a><li><a href='項目三.html'>項目三</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,13 +142,8 @@ img.add_border {
           </div>
 
         </header>
-    <div id="tipue_search_content">w12鋼球平台 << <a href='w12鋼球平台.html'>Previous</a> <br /><h1>w17</h1>
-<p>項目一</p>
-<p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/ErbLC6saOK1OgnnG-Bv_pQgBTjt40kj420DgtEcnRsTKtg?e=LJVmQb">零件連結</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i2bkSBZzdOI?si=OVaR2qcDZIHZIqz8" title="YouTube video player" width="560"></iframe></p>
-<p>項目二</p>
-<p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/Em35IBjO6TtEq5eoMMMEkBUBRJbWpbbR3L6mfcOtwzemTw?e=jnFO3j">組合圖連結</a></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/VxFTWnirn4Y?si=dervvnlYeAp-hJme" title="YouTube video player" width="560"></iframe></p><br />w12鋼球平台 << <a href='w12鋼球平台.html'>Previous</a> </div>
+    <div id="tipue_search_content">w12鋼球平台 << <a href='w12鋼球平台.html'>Previous</a> <a href='項目一.html'>Next</a> >> 項目一<br /><h1>w17</h1>
+<br />w12鋼球平台 << <a href='w12鋼球平台.html'>Previous</a> <a href='項目一.html'>Next</a> >> 項目一</div>
 
     <!-- footer -->
       <div class="container">
