新增期末報告

--- a/config/content.htm
+++ b/config/content.htm
@@ -351,3 +351,16 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/Em35IBjO6TtEq5eoMMMEkBUBRJbWpbbR3L6mfcOtwzemTw?e=jnFO3j">組合圖連結</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/VxFTWnirn4Y?si=dervvnlYeAp-hJme" title="YouTube video player" width="560"></iframe></p>
 <h2>項目三</h2>
+<h1>期末籃球場作業</h1>
+<p>期末報告題目: 網際綜合球類競賽機器人協同設計與模擬</p>
+<p>競技場景中必須納入數位計時器與類比記分機構</p>
+<p>每場競技時間為 10 分鐘</p>
+<p>每隊球員機器人依照各組人數平均分為兩隊</p>
+<p>每位機器人球員必須同時具備踢球、取球與投球機構</p>
+<p>雙方陣營各有足球門與籃球框各一具</p>
+<p>球場中由裁判程式於開場時, 在球場正中央落下 10 球</p>
+<p>將球踢進對方球門者得 1 分, 將球投入對方籃框者得 5 分</p>
+<p></p>
+<p><span>以下是我們這組設計的球員機器人:</span></p>
+<p><span><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/EgqtgboaynFKirQ0Pmf-NqcBfB1IKsydQVOsFaIels9sJA?e=9zonYN">挖機零件連結</a></span></p>
+<p><span>我們設計是採用挖土機的方式，將球挖進籃框裡，以此得分。</span></p>
