--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -344,9 +344,23 @@ doc["threejsblock"].bind("click", threejsblock.do)
 <p>繪製過程程式:<span style="background-color: #ffffff; color: #ff0000;"><strong><a href="https://gist.githubusercontent.com/Changyou41123220/283727dbc1d6f825d451e9cedfdd27c4/raw/155fca406cb92101aae9735f376e9717e8ea3f8b/%25E9%259B%25B6%25E4%25BB%25B61%25E9%2581%258E%25E7%25A8%258B.py" style="background-color: #ffffff; color: #ff0000;">零件1</a></strong></span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/HS-Tl_-t5jY?si=Zz-kgAHfRjfLpQqw" title="YouTube video player" width="560"></iframe></p>
 <h1>w17</h1>
-<h2>項目三</h2><h2>項目一</h2>
+<h2>項目一</h2>
 <p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/ErbLC6saOK1OgnnG-Bv_pQgBTjt40kj420DgtEcnRsTKtg?e=LJVmQb">零件連結</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/i2bkSBZzdOI?si=OVaR2qcDZIHZIqz8" title="YouTube video player" width="560"></iframe></p>
 <h2>項目二</h2>
 <p><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/Em35IBjO6TtEq5eoMMMEkBUBRJbWpbbR3L6mfcOtwzemTw?e=jnFO3j">組合圖連結</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/VxFTWnirn4Y?si=dervvnlYeAp-hJme" title="YouTube video player" width="560"></iframe></p>
+<h2>項目三</h2>
+<h1>期末籃球場作業</h1>
+<p>期末報告題目: 網際綜合球類競賽機器人協同設計與模擬</p>
+<p>競技場景中必須納入數位計時器與類比記分機構</p>
+<p>每場競技時間為 10 分鐘</p>
+<p>每隊球員機器人依照各組人數平均分為兩隊</p>
+<p>每位機器人球員必須同時具備踢球、取球與投球機構</p>
+<p>雙方陣營各有足球門與籃球框各一具</p>
+<p>球場中由裁判程式於開場時, 在球場正中央落下 10 球</p>
+<p>將球踢進對方球門者得 1 分, 將球投入對方籃框者得 5 分</p>
+<p><span>以下是我們這組設計的球員機器人:</span></p>
+<p><span><img alt="" height="218" src="/images/螢幕擷取畫面 2024-06-19 155447.png" width="400"/></span></p>
+<p><span><a href="https://nfuedu-my.sharepoint.com/:f:/g/personal/41123220_nfu_edu_tw/EgqtgboaynFKirQ0Pmf-NqcBfB1IKsydQVOsFaIels9sJA?e=9zonYN">挖機零件連結</a></span></p>
+<p><span>我們設計是採用挖土機的方式，將球挖進籃框裡，以此得分。</span></p>
